Update project structure and fix routing

--- a/templates/index.html
+++ b/templates/index.html
@@ -37,6 +37,7 @@
             
             <button type="submit">开始分析</button>
         </form>
+        <script src="/static/js/main.js"></script>
     </div>
 </body>
 </html> 
